# iva

./: SYSTEM_PROMPT.txt  audio.py  llm.py  main.py  pyproject.toml  stt.py  tts.py
actions/: action_template.py  manifest.json  open_file_explorer.py  terminal.py
